[16] server-url 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,3 +29,4 @@ springdoc:
     path: /api-docs/json
   default-produces-media-type: application/json;charset=UTF-8
   default-consumes-media-type: application/json;charset=UTF-8
+  server-url: http://localhost:8080
