--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,12 +12,21 @@ spring:
     properties:
       hibernate:
         format_sql: true
+        ddl-auto: validate
     hibernate:
       naming:
         physical-strategy: org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
         implicit-strategy: org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
       ddl-auto: none
     open-in-view: false
+    defer-datasource-initialization: false
+  flyway:
+    enabled: true
+    url: jdbc:mysql://localhost:3306/ecommerce_site
+    user: root
+    password: 8cfv67b67af12zxc
+    baseline-on-migrate: true
+    locations: classpath:db/migration/mysql
   jackson:
     property-naming-strategy: SNAKE_CASE
 server:
