--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,12 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     // Project Common Dependency End ----------------------------------------
 
+    // QueryDsl
+    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+    annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
+    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+
     // fly away
     implementation 'org.flywaydb:flyway-mysql'
     implementation 'org.flywaydb:flyway-core'
