--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,9 @@ dependencies {
     // oauth 2.0
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
 
+    // keyclock
+    implementation 'org.keycloak:keycloak-admin-client:25.0.0'
+
     // test dependency
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
