--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -56,3 +56,4 @@ oauth:
     uri:
       redirect: http://localhost:8080/auth/callback
       token: http://localhost:9090/realms/oauth2/protocol/openid-connect/token
+    api-key: klzx98c7vadq34tkdjfhgq3#@$adfg!dfax-n-4c
