[13] Security config 의 exclude api 와 filter 의 exclude 를 하나로 통합
- ConfigurationProperties 클래스 생성하여 환경변수에서 가져오는 것으로 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -57,3 +57,12 @@ oauth:
       redirect: http://localhost:8080/auth/callback
       token: http://localhost:9090/realms/oauth2/protocol/openid-connect/token
     api-key: klzx98c7vadq34tkdjfhgq3#@$adfg!dfax-n-4c
+auth:
+  exclude:
+    post:
+      - /users/keycloak/webhook
+    get:
+      - /auth/**
+    web:
+      - /swagger-ui/**
+      - /api-docs/**
