[36] partner user 등록

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -61,6 +61,8 @@ auth:
   exclude:
     post:
       - /users/keycloak/webhook
+      - /partners/keycloak/webhook
+      - /partners
     get:
       - /auth/**
     web:
