[33] partner 권한이 필요한 api 에 권한 체크 추가
- 토큰에서 role 체크
- 기존에 request param 으로 받던 partner id 를 토큰에서 파싱하도록 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -68,3 +68,8 @@ auth:
     web:
       - /swagger-ui/**
       - /api-docs/**
+logging:
+  level:
+    org:
+      springframework:
+        security: DEBUG
